--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+  - lib/pokemon.png
+  - lib/background.jpg
+  - lib/pokeball.gif
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
